<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grade Log</string>
    <string name="action_settings">Settings</string>
    
    <string name="add_course">New Course</string>
    <string name="add_grade">New Assignment</string>
    <string name="course_category_add_text">New Category</string>
    
    <string name="course_delete">Delete</string>
    
    <string name="course_name_hint">Tap here to enter.</string>
    <string name="course_add_header">Course Info</string>
    <string name="course_name_label">Course Name:</string>
    <string name="course_weighted_text">Is the course weighted?</string>
    <string name="course_category_label_text">Category Name:</string>
    <string name="course_category_edit_hint">Tap here to enter.</string>
    <string name="course_category_weight_value_label">Percentage of Final Grade:</string>
    <string name="course_add_save">Save</string>
    
    <string name="course_category_remove_text">Remove Last Category</string>
    
    <string name="grade_add_header">Grade Entry</string>
    <string name="grade_add_name_hint">Tap to add assignment name.</string>
    <string name="grade_add_grade_value">How many points did you get?</string>
    <string name="grade_add_grade_total">How many points was this out of?</string>
    <string name="grade_add_btn_text">Save Assignment</string>
    
    <string name="background_color">#FFFFFF</string>
    
    <string name="cancel_add">Cancel</string>

</resources>
