<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/course_add_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true" >
        
    		<Button 
			    android:id="@+id/course_add_save"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/course_add_save" />
    		
    		<Button 
    		    android:id="@+id/course_add_cancel"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/cancel_add"
    		    android:onClick="onClick" />  
    		    
 	</LinearLayout>
    
	<ScrollView 
	    android:id="@+id/course_scroll_view"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_above="@+id/course_add_buttons" >
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        
	        <TextView 
	            android:id="@+id/course_add_header"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_alignParentLeft="true"
	            android:textSize="28sp"
	            android:gravity="center"
	            android:text="@string/course_add_header" />
	        
	        <TextView
	            android:id="@+id/course_name_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignTop="@+id/course_name_edittext"
	            android:layout_alignBottom="@+id/course_name_edittext"
	            android:layout_below="@+id/course_add_header"
	            android:layout_marginRight="50dp"
	            android:text="@string/course_name_label" />
	                
	        <EditText
	            android:id="@+id/course_name_edittext"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_toRightOf="@+id/course_name_label"
	            android:layout_below="@+id/course_add_header"
	            android:hint="@string/course_name_hint"
	            android:singleLine="true"
	            android:maxLength="12" />
	         
	        <CheckBox 
	            android:id="@+id/course_weighted_checkbox"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/course_name_label"
	            android:text="@string/course_weighted_text" />
	        
	        <LinearLayout 
	            android:id="@+id/course_category_layout"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:visibility="gone"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@+id/course_weighted_checkbox">
	            	            
	            <Button 
	                android:id="@+id/course_category_add_btn"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/course_category_add_text"/>
	            
	            <Button
	                android:id="@+id/course_category_remove_btn"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/course_category_remove_text" />
	            
	        </LinearLayout>
	        
        </RelativeLayout>
	        
	</ScrollView>
	
</RelativeLayout>